# soroban-multisig-contracts

./: Cargo.toml  Makefile  README.md
.github/workflows/: basic.yml  release.yml
contracts/deployer/: Cargo.toml
contracts/deployer/src/: lib.rs  tests.rs
contracts/multisig/: Cargo.toml
contracts/multisig/src/: contract.rs  error.rs  lib.rs  storage.rs  tests.rs
contracts/multisig/src/tests/: multisig.rs  setup.rs  transaction_proposal.rs  update_proposal.rs
docs/: architecture.md
