[workspace]
members = ["contracts/multisig", "contracts/token", "contracts/deployer"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/MoonBite-GmbH/soroban-multisig-contracts"

[workspace.dependencies]
soroban-decimal = "1.1.0"
soroban-token-sdk = "21.6.0"
soroban-sdk = "21.6.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
